--- a/docs/范小勤看了都能懂的使用教程.md
+++ b/docs/范小勤看了都能懂的使用教程.md
@@ -24,7 +24,7 @@
 
 设置完成。咱们点击左侧的“生成”按钮，回到主界面。
 
- ## 导入文本
+## 导入文本
 
 点击主界面左侧的文本框，会弹出来一个新的窗口。
 
@@ -58,7 +58,7 @@
 
 看向这个新窗口，先看中间白底的选择框部分。
 
-先判断你是哪种学生，这个不用讲。
+先判断你是哪个年龄段的学生，这个不用讲。
 
 注：五四制学校学生要选带五·四标签的。
 
@@ -66,15 +66,15 @@
 
 然后选科目。自己找。双击。
 
-接下来，选择出版社。出版社信息一般会在书的封面/前三页/最后一页有标记。你自己找。依旧双击。
+接下来，选择出版社。出版社信息一般会在书的封面/前三页/最后一页有标记。自己找。依旧双击。
 
 最后，选择你需要的那本书。
 
 双击，这次不会打开新的目录了。
 
-看向程序右下部分，会有一个“已选择………………”的标识。看到他说明做对了。
+看向程序右下部分，会有一个“已选择………………”的标识。看到它就说明咱们做对了。
 
-然后看左边。输入自己想要的页码和提取内容。
+然后看左边。输入想要的页码和提取内容。
 
 页码只能选一页。提取内容可以自己指定，
 
@@ -84,15 +84,15 @@
 
 稍等一会。
 
- __如果你第一次选择这本书，程序会弹出一个弹窗，让你输入实际的页数__
+ __如果是第一次选择这本书，程序会弹出一个弹窗，让你输入实际的页数__
 
 咱们点击新弹窗左下角的“打开PDF”按钮，然后程序会呼出其他软件打开pdf。
 
-去那个软件，找到你需要的书页。不要看程序显示的页数，看书右下角的页码。
+去那个软件，找到需要的书页。不要看程序显示的页数，看书右下角的页码。
 
 比如说，你想要书的18页，你就在软件里翻到书的18页，然后查看软件显示的页数（这个数绝对会大于18，也就是你选择的书页）。
 
-把这个页数输入我们的新弹窗内。
+把这个页数输入咱们的新弹窗内。
 
 点确定，再等一会就好了。
 
@@ -104,4 +104,36 @@
 
 ### 最后，点击“确定”。不要点“X”，点“x”不保存退出。
 
-我真困了。
+## 音频生成与预览
+### 生成
+（第一次使用时）导入文本后，咱们点击“设置”，进入设置选项卡。
+
+下方有一个“默认路径”，咱们点击默认路径右侧的按钮，选一个文件夹 点确定。生成的音频都会存放在这个文件夹里。
+
+回到主界面。
+
+在一蓝一红（如果提前选择了音色则是绿色）两个大按钮下方有一个选择框，咱们需要在这里选择一个自己心仪的音色。
+
+注意语言不要选错了。
+
+当右侧的按钮变绿时，咱们就可以点击了。
+
+点击后等待右下角弹出蓝色提示时就可以了。
+
+### 预览
+导入文本后，咱们依旧是选择音色。参考上面[生成](#生成)部分。
+
+然后点击左边的这个蓝色按钮。
+
+等待右下角弹出蓝色提示。
+
+蓝色提示弹出以后，咱们再点击一下那个蓝色按钮。
+
+音频就开始播放了。
+
+咱们可以使用键盘来控制播放。
+
+这一步详见“个性化”页面。
+
+
+
