--- a/docs/范小勤看了都能懂的使用教程.md
+++ b/docs/范小勤看了都能懂的使用教程.md
@@ -108,7 +108,7 @@
 ### 生成
 （第一次使用时）导入文本后，咱们点击“设置”，进入设置选项卡。
 
-下方有一个“默认路径”，咱们点击默认路径右侧的按钮，选一个文件夹 点确定。生成的音频都会存放在这个文件夹里。
+下方有一个“默认保存路径”，咱们点击右侧的按钮，选一个文件夹 点确定。生成的音频都会存放在这个文件夹里。
 
 回到主界面。
 
@@ -134,6 +134,8 @@
 咱们可以使用键盘来控制播放。
 
 这一步详见“个性化”页面。
+
+
 
 
 
